web-infras/parser/tests/fixtures/babel/core/uncategorised/409/output.txt
[SyntaxError]: unlabeled break must be inside loop or switch. (1,1)
1|break
 |^
